[package]
name = "substrate-api-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Substrate client dependencies
subxt = { version = "0.37", features = ["substrate-compat"] }
sp-core = "34.0"
sp-keyring = "39.0"
sp-runtime = "39.0"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client for JSON-RPC calls
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.11.8"
log = "0.4.27"
